# Prism

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: index.md
examples/: basic_usage.py
src/: __init__.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  local_adapter.py  openai_adapter.py
src/cache/: __init__.py  manager.py
src/core/: __init__.py  config.py  orchestrator.py  router.py
src/observability/: __init__.py  metrics.py  tracer.py
src/routing/: __init__.py  classifier.py  model_selector.py
tests/: __init__.py
